--- a/invessence/modules/iAdvice/src/main/webapp/review.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/review.xhtml
@@ -63,7 +63,7 @@
         <div class="Container40 Responsive100">
             <div class="ContainerIndent">
                 <p:panel id="graphArea" style="border: 0px; background: transparent"
-                         rendered="#{ltamprofile.displayRiskMeter}">
+                         rendered="#{ltamprofile.displayGraphs}">
                     <div class="EmptyBox5"></div>
                     <div class="Container100 Responsive100">
                         <p:panel style="border: 0px; background: transparent"
