--- a/invessence/modules/web/src/main/webapp/pages/consumer/cto/page3.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/cto/page3.xhtml
@@ -30,8 +30,7 @@
                     <div class="Container50">
                         <div class="Wid30">Gender</div>
                         <div class="Wid60">
-                            <p:selectOneMenu
-                                    required="true" requiredMessage="Select one Gender.">
+                            <p:selectOneMenu>
                                 <f:selectItem itemLabel="Choose One" itemValue=""/>
                                 <f:selectItem itemLabel="Male" itemValue="Male"/>
                                 <f:selectItem itemLabel="Female" itemValue="Female"/>
@@ -41,8 +40,7 @@
                     <div class="Container50">
                         <div class="Wid30">Marital Status</div>
                         <div class="Wid60">
-                            <p:selectOneMenu
-                                    required="true" requiredMessage="Select one Marital Status.">
+                            <p:selectOneMenu>
                                 <f:selectItem itemLabel="Choose One" itemValue=""/>
                                 <f:selectItem itemLabel="Single" itemValue="Single"/>
                                 <f:selectItem itemLabel="Married" itemValue="Married"/>
