--- a/invessence/modules/web/src/main/webapp/pages/consumer/cto/page5.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/cto/page5.xhtml
@@ -14,8 +14,7 @@
                     <p:inputText styleClass="Wid90" placeholder="Name of Bank">
                     </p:inputText>
                     <div class="Wid90">Type of Account</div>
-                    <p:selectOneMenu
-                            required="true" requiredMessage="Select one account type.">
+                    <p:selectOneMenu>
                         <f:selectItem itemLabel="Choose One" itemValue=""/>
                         <f:selectItem itemLabel="Checking" itemValue="Checking"/>
                         <f:selectItem itemLabel="Savings" itemValue="Savings"/>
