Demo for T-Rowe

--- a/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/addon/cEdit.xhtml
@@ -64,6 +64,7 @@
                                          update=":ceForm:inputArea, :ceForm:pTabView:rTabView"
                                          actionListener="#{cepb.gotoPrevTab}"/>
                         <p:commandButton value="Next" styleClass="Fright" rendered="#{cepb.enableNextButton}"
+                                         type="submit"
                                          update=":ceForm:inputArea, :ceForm:pTabView:rTabView"
                                          actionListener="#{cepb.gotoNextTab}"/>
                     </f:facet>
