--- a/invessence/modules/web/src/main/webapp/pages/consumer/aggr/main.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/aggr/main.xhtml
@@ -50,7 +50,8 @@
                                                      onclick="PF('dlgWelcome').hide()">
                                     </p:commandButton>
                                     <p:commandButton value="Get Started" styleClass="Fright"
-                                                     onclick="PF('dlgWelcome').hide()">
+                                                     actionListener="#{yodleeBean.userRegistration}"
+                                                     oncomplete="PF('dlgWelcome').hide();" >
                                     </p:commandButton>
                                 </div>
                             </div>
