--- a/invessence/modules/web/src/main/webapp/pages/common/myprofile.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/common/myprofile.xhtml
@@ -38,9 +38,11 @@
 
                             <p:tab title="Security Questions">
                                 <p:panel style="border: 0px; height: 340px;">
-                                    <f:facet name="header">
-                                        <h:outputText colspan="2" value="These below questions and answers will be used to further authenticate you when needed." styleClass="Wid90"/>
-                                    </f:facet>
+                                    <div class="Container100">
+                                        <h3>
+                                            <h:outputText value="These below questions and answers will be used to further authenticate you when needed." styleClass="Wid90"/>
+                                        </h3>
+                                    </div>
                                     <div class="EmptyBox10"/>
                                     <p:panelGrid id="questions"
                                                  columns="2" layout="grid" style="border:0px !important; background:transparent;" class="FormContent">
