--- a/invessence/modules/web/src/main/webapp/pages/common/overview.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/common/overview.xhtml
@@ -76,7 +76,7 @@
                         </p:dataTable>
                     </p:column>
                     <p:column styleClass="TexAlLeft Wid50">
-                        <div class="Wid45 BorderedBox Fright TexAlCenter Mar10">
+                        <div class="Wid50 BorderedBox Fright TexAlCenter Mar10">
                             <div class="ContainerIndent">
                                 <div class="EmptyBox5"></div>
                                 <span class="Fs14 DispBlock gray">Percent Reached</span>
@@ -89,7 +89,7 @@
                                 <div class="EmptyBox5"></div>
                             </div>
                         </div>
-                        <div class="Wid45 BorderedBox Fright TexAlCenter Mar10">
+                        <div class="Wid50 BorderedBox Fright TexAlCenter Mar10">
                             <div class="ContainerIndent">
                                 <div class="EmptyBox5"></div>
                                 <span class="Fs14 DispBlock gray">Goal Desired</span>
@@ -102,9 +102,9 @@
                                 <div class="EmptyBox5"></div>
                             </div>
                         </div>
-                        <div class="Wid90">
+                        <div class="Wid90" style="margin-left: 15px; margin-top: 30px">
                             <p:chart type="pie" model="#{positionBean.pieModel}"
-                                     styleClass="Wid90" responsive="true"
+                                     styleClass="Wid100 MarTop10" responsive="true"
                                      rendered="#{positionBean.pieModel == null ? false : true}"/>
 
                         </div>
